--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p>
 	Exemplo de uma aplicação web que faz a busca do endereço pelo CEP, usando a metodologia AJAX e WebService. <br />
 	Para mais detalhes veja o código fonte fazendo 
-	<a href="http://files.edysegura.com/labs/busca-por-cep.zip">downlaod</a> deste 
+	<a href="http://files.edysegura.com/labs/busca-por-cep.zip">download</a> deste 
 	<a href="http://files.edysegura.com/labs/busca-por-cep.zip">exemplo</a>.
 </p>
 
